# Voicer_server

./: .dockerignore  .env.example  .gitignore  Dockerfile  app.py  config.py  handlers.py  pyproject.toml  requirements.txt  run.py
ASR/: audio_tools.py  base_asr.py  long_audio_transcriber.py  qwen_asr.py  srt_utils.py  subtitle_orchestrator.py  transcription_orchestrator.py
LLM/: base_llm.py  message_builder.py  new_api_llm.py  proofread_comparator.py  voice_proofread_one_shot.py
app/: __init__.py  main.py
app/api/: routes_admin.py  routes_audio.py  routes_jobs.py  routes_pages.py  routes_polish.py
app/core/: db.py  security.py  settings.py  tasks.py
app/providers/asr/: base.py  qwen.py  siliconflow_asr.py
app/providers/llm/: base.py  deepseek.py  gemini.py  openai_compatible.py  siliconflow_llm.py
app/services/: asr_pipeline.py  job_service.py  polish_service.py  vad_service.py
app/static/css/: app.css
app/static/js/: app.js
app/templates/: index.html  job_detail.html  layout.html  login.html  polish.html  transcript_detail.html  upload.html
